--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.5",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "revolution/socialite-amazon": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
